Fix double border on "Order Summary" table on checkout

--- a/core/app/assets/stylesheets/store/screen.css.scss
+++ b/core/app/assets/stylesheets/store/screen.css.scss
@@ -555,6 +555,10 @@ mark {background-color: $c_colored; color: white; font-style: italic; font-weigh
         }
       }
 
+      tr[data-hook="order_total"] {
+        border-bottom: none;
+      };
+
       #summary-order-total {
         @extend span.price;
         font-size: 14px;
